<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".MainActivity"
        android:orientation="vertical">

        <EditText
            android:id="@+id/monthly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/monthly_savings"
            android:autofillHints=""
            android:hint="@string/monthly_savings_rate" />

        <EditText
            android:id="@+id/interest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/interest_rate"
            android:autofillHints=""
            android:hint="@string/expected_interest_rate" />

        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/your_current_age"
            android:autofillHints=""
            android:hint="@string/current_age" />

        <EditText
            android:id="@+id/retirement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/planned_retirement_age"
            android:autofillHints=""
            android:hint="@string/your_planned_retirement_age" />

        <EditText
            android:id="@+id/savings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/current_savings"
            android:autofillHints=""
            android:hint="@string/current_savings_amount" />

        <Button
            android:id="@+id/calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate" />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/at_this_rate_with_your_current_monthly_savings_you_will_have_1_000_000_by_65"
            android:textSize="16sp" />

    </LinearLayout>
</layout>